--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <!-- UPDATED META TAG TO PREVENT ZOOMING -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta name="theme-color" content="#000000" />
   <meta
